[package]
name = "webpush-server"
version = "0.1.0"
authors = ["Linus Kämmerer <linuskmr.dev@gmail.com>"]
edition = "2021"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web-push-native = "0.4.0"
